# singleton-demo

./: CMakeLists.txt  README.md  plan.md  singleton_scope_report.md
dso_scope/: CMakeLists.txt  libplugin_a.cpp  libplugin_b.cpp  logger.hpp  main.cpp  plan.md
os_scope/: CMakeLists.txt  plan.md  singleton_daemon.cpp
process_scope/: CMakeLists.txt  plan.md
process_scope/core_shared_lib/: CMakeLists.txt  core_api.cpp  core_api.hpp  libA.cpp  libB.cpp  libC.cpp  main.cpp
process_scope/dlsym_default/: CMakeLists.txt  dso_common.cpp  dso_common.hpp  libA.cpp  libB.cpp  libC.cpp  main.cpp
process_scope/include/: process_logger.hpp
process_scope/main_owner/: CMakeLists.txt  libA.cpp  libB.cpp  libC.cpp  main.cpp
process_scope/shared_memory/: CMakeLists.txt  libA.cpp  libB.cpp  libC.cpp  main.cpp  shm_logger.cpp  shm_logger.hpp
scripts/: generate_report.py
thread_scope/: CMakeLists.txt  basic_demo.cpp  libworker.cpp  libworker.hpp  mixed_demo.cpp  plan.md  thread_logger.hpp
tu_scope/: CMakeLists.txt  logger.hpp  logger_inline.hpp  logger_static.hpp  main.cpp  plan.md  user_a.cpp  user_b.cpp
